<?xml version="1.0"?>
<package format="2">
  <name>ros_service_example</name>
  <version>0.0.0</version>
  <description>Example of ROS service</description>


  <author email="gregor.seljak@gmail.com">Gregor Seljak</author>
  <maintainer email="gregor.seljak@gmail.com">Gregor Seljak</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
